[tool.poetry]
name = "image_enchancement"
version = "0.1.0"
description = ""
authors = ["vladparh <vladparh@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "2.0.0"
torch = {version = "^2.5.1+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1", source = "pytorch-gpu"}
pytorch-lightning = "^2.5.0.post0"
bestconfig = "^1.3.6"
opencv-python = "^4.11.0.86"



[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
mlflow = "^2.20.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
